--- a/mtk-linkit-base/Makefile
+++ b/mtk-linkit-base/Makefile
@@ -3,28 +3,23 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=mtk-linkit
+PKG_NAME:=mtk-linkit-base
 PKG_RELEASE:=1
 
 include $(INCLUDE_DIR)/package.mk
 
-define Package/mtk-linkit
+define Package/mtk-linkit-base
   TITLE:=MTK LinkIt Smart board support package
   DEPENDS:=@TARGET_ramips_mt7688_LinkIt7688 \
-  	+gdbserver +curl +strace +coreutils +coreutils-stty \
   	+avahi-nodbus-daemon +mountd +mjpg-streamer \
-	+uhttpd +rpcd +rpcd-mod-iwinfo +git +git-http +samba36-server \
-	+python +python-pyserial +python-pip +hidapi \
-	+libmraa +libupm +node +node-hid +node-cylon-firmata +yunbridge \
-	+luci +luci-theme-openwrt +luci-app-mjpg-streamer +luci-app-samba +luci-lib-json \
-	+rpcd-mod-rpcsys +cgi-io +avrdude +spi-tools +uboot-envtools \
+	+uhttpd +rpcd +rpcd-mod-iwinfo \
+	+luci +luci-theme-openwrt +luci-app-mjpg-streamer +luci-app-samba \
 	+kmod-fs-vfat +kmod-fs-exfat +kmod-i2c-core +kmod-i2c-ralink \
 	+kmod-nls-base +kmod-nls-cp437 +kmod-nls-iso8859-1 \
 	+kmod-nls-iso8859-15 +kmod-nls-iso8859-2 +kmod-nls-utf8 \
 	+kmod-sdhci-mt7620 +kmod-usb-storage \
-	+kmod-video-core +kmod-video-uvc \
 	+kmod-sound-core +kmod-sound-mtk +madplay-alsa +alsa-utils \
-	+mtk-linkit-webui +mtk-sdk-wifi +tcpdump-mini
+	+mtk-sdk-wifi +iperf
 
   CATEGORY:=Base system
   DEFAULT:=y
@@ -39,7 +34,7 @@ define Build/Compile
         $(TARGET_CC) $(TARGET_CFLAGS) $(EXTRA_CFLAGS) -Wall -Werror -o $(PKG_BUILD_DIR)/refclk src/refclk.c
 endef
 
-define Package/mtk-linkit/install
+define Package/mtk-linkit-base/install
 	$(INSTALL_DIR) $(1)/sbin
 	
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/pinmux $(1)/sbin/mt7688_pinmux
@@ -47,4 +42,4 @@ define Package/mtk-linkit/install
 	$(CP) ./files/* $(1)
 endef
 
-$(eval $(call BuildPackage,mtk-linkit))
+$(eval $(call BuildPackage,mtk-linkit-base))
